syntax = "proto3";

package tesla.proto.energy_device.v1;

option go_package = "github.com/teslamotors/energy_device/pkg/protocol/protobuf/energydevice/v1";
option java_package = "com.tesla.generated.energy_device.v1";
option java_outer_classname = "AuthorizationAPIListAuthorizedClientsResponse";

import "tesla_api/protobuf/energy_device/v1/authorization_record.proto";

message AuthorizationAPIListAuthorizedClientsResponse {
  repeated AuthorizationRecord clients = 1;
  bool enable_line_switch_off          = 2;
}