syntax = "proto3";

package tesla.proto.energy_device.v1;

option go_package = "github.com/teslamotors/energy_device/pkg/protocol/protobuf/energydevice/v1";
option java_package = "com.tesla.generated.energy_device.v1";
option java_outer_classname = "AuthorizationRecord";

import "google/protobuf/timestamp.proto";
import "tesla_api/protobuf/energy_device/v1/authorization_role.proto";
import "tesla_api/protobuf/energy_device/v1/authorized_client_type.proto";
import "tesla_api/protobuf/energy_device/v1/authorized_key_type.proto";
import "tesla_api/protobuf/energy_device/v1/authorized_state.proto";
import "tesla_api/protobuf/energy_device/v1/authorized_verification_type.proto";

message AuthorizationRecord {
  AuthorizedClientType type               = 1;
  string description                      = 2;
  AuthorizedKeyType key_type              = 3;
  bytes public_key                        = 4;
  repeated AuthorizationRole roles        = 5;
  AuthorizedState state                   = 6;
  AuthorizedVerificationType verification = 7;
  google.protobuf.Timestamp added_time    = 8;
  optional string identifier              = 9;
  optional bytes authorized_by_public_key = 10;
}